--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -25,7 +25,7 @@ head(stepsByDay)
 
 2. Make a histogram of the total number of steps taken each day
 ```{r plot4, echo=TRUE}
-hist(stepsByDay$steps, col = "blue"
+hist(stepsByDay$steps, col = "red"
      , xlab = "Steps", main = "Total Number of Steps Per Day")
 ```
 
@@ -47,7 +47,7 @@ head(averageSteps)
 ```{r plot1, echo=TRUE}
 with(averageSteps, plot(interval, steps
                 , type="l", main="Average number of steps taken in 5-min interval"
-                , col = "blue")) 
+                , col = "green")) 
 ```
 
 3. Which 5-minute interval, on average across all the days in the dataset, contains the maximum number of steps?
@@ -99,7 +99,7 @@ head(sumdata)
 
 6. Make a histogram of the total number of steps taken each day
 ```{r plot2, echo=TRUE}
-hist(sumdata$steps, col = "green"
+hist(sumdata$steps, col = "blue"
      , xlab = "Steps"
      , main = "Total Number of Steps Per Day (with the missing data filled in)")
 ```
@@ -156,9 +156,9 @@ head(weekendMean)
 layout(matrix(c(1,1,2,2), 2, 2, byrow = TRUE))
 plot(weekdayMean$interval, weekdayMean$steps
      , xlab = "interval", ylab = "Number of steps"
-     , main ="Weekday", col ="blue", type="l") 
+     , main ="Weekday", col ="red", type="l") 
 
 plot(weekendMean$interval, weekendMean$steps
      , xlab = "interval", ylab = "Number of steps"
-     , main ="Weekend", col ="yellow", type="l")
+     , main ="Weekend", col ="green", type="l")
 ```
